--- a/package.json
+++ b/package.json
@@ -254,6 +254,7 @@
     "react-hot-loader": "^4.12.21",
     "react-router-dom": "^5.2.0",
     "regenerator-runtime": "^0.13.5",
+    "rxjs": "^6.6.3",
     "source-map-support": "^0.5.19",
     "uuid": "^8.3.1"
   },
