--- a/package.json
+++ b/package.json
@@ -161,6 +161,7 @@
     "@babel/preset-typescript": "^7.10.4",
     "@babel/register": "^7.10.5",
     "@teamsupercell/typings-for-css-modules-loader": "^2.2.1",
+    "@types/echarts": "^4.9.0",
     "@types/enzyme": "^3.10.5",
     "@types/enzyme-adapter-react-16": "^1.0.6",
     "@types/history": "^4.7.7",
@@ -242,7 +243,10 @@
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
     "ahooks": "^2.7.1",
+    "clsx": "^1.1.1",
     "dayjs": "^1.9.4",
+    "echarts": "^4.9.0",
+    "echarts-for-react": "^2.0.16",
     "electron-debug": "^3.1.0",
     "electron-log": "^4.2.4",
     "electron-updater": "^4.3.4",
