feat: 准备设置页面的相关内容

--- a/app/package.json
+++ b/app/package.json
@@ -3,6 +3,7 @@
   "productName": "HearthstoneBattlegroundsTools",
   "version": "1.0.0",
   "description": "炉石传说酒馆战棋战绩统计工具",
+  "author": "chenyueban <jasonchan0527@gmail.com>",
   "main": "./main.prod.js",
   "scripts": {
     "electron-rebuild": "node -r ../internals/scripts/BabelRegister.js ../internals/scripts/ElectronRebuild.js",
