feat: 使用 path alias 重构。解决对局结束不记录战绩的问题

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,7 +20,13 @@
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
     "resolveJsonModule": true,
-    "allowJs": true
+    "allowJs": true,
+    "baseUrl": ".",
+    "paths": {
+      "@app/*": ["app/*"],
+      "@logHandler/*": ["app/logHandler/*"],
+      "@suspension/*": ["app/suspension/*"]
+    }
   },
   "exclude": [
     "test",
