--- a/package.json
+++ b/package.json
@@ -261,6 +261,7 @@
     "regenerator-runtime": "^0.13.5",
     "rxjs": "^6.6.3",
     "source-map-support": "^0.5.19",
+    "use-deep-compare-effect": "^1.4.0",
     "uuid": "^8.3.1"
   },
   "devEngines": {
