feat: 完成插件初始化的部分

--- a/package.json
+++ b/package.json
@@ -251,8 +251,11 @@
     "electron-log": "^4.2.4",
     "electron-store": "^6.0.1",
     "electron-updater": "^4.3.4",
+    "fontsource-roboto": "^3.0.3",
+    "fs-extra": "^9.0.1",
     "history": "^4.7.2",
     "hox": "^1.1.1",
+    "live-plugin-manager": "^0.15.1",
     "obs-websocket-js": "^4.0.2",
     "react": "^16.13.1",
     "react-dom": "^16.12.0",
