--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "version": "1.0.0",
   "description": "炉石传说酒馆战棋战绩统计工具",
   "scripts": {
+    "prebuild": "rimraf app/dist",
     "build": "concurrently \"yarn build-main\" \"yarn build-renderer\"",
     "build-dll": "cross-env NODE_ENV=development webpack --config ./configs/webpack.config.renderer.dev.dll.babel.js --colors",
     "build-e2e": "cross-env E2E_BUILD=true yarn build",
@@ -100,21 +101,21 @@
     ],
     "publish": {
       "provider": "github",
-      "owner": "chenyueban",
+      "owner": "hbt-org",
       "repo": "hearthstone-battlegrounds-tools",
       "private": false
     }
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/chenyueban/hearthstone-battlegrounds-tools.git"
+    "url": "git+https://github.com/hbt-org/hearthstone-battlegrounds-tools.git"
   },
   "author": "chenyueban <jasonchan0527@gmail.com>",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/chenyueban/hearthstone-battlegrounds-tools/issues"
+    "url": "https://github.com/hbt-org/hearthstone-battlegrounds-tools/issues"
   },
-  "homepage": "https://github.com/chenyueban/hearthstone-battlegrounds-tools#readme",
+  "homepage": "https://github.com/hbt-org/hearthstone-battlegrounds-tools#readme",
   "jest": {
     "testURL": "http://localhost/",
     "moduleNameMapper": {
@@ -173,6 +174,7 @@
     "@types/react-router": "^5.1.8",
     "@types/react-router-dom": "^5.1.5",
     "@types/react-test-renderer": "^16.9.3",
+    "@types/reactour": "^1.17.1",
     "@types/uuid": "^8.3.0",
     "@types/webpack": "^4.41.21",
     "@types/webpack-env": "^1.15.2",
@@ -188,7 +190,7 @@
     "concurrently": "^5.3.0",
     "core-js": "^3.6.5",
     "cross-env": "^7.0.2",
-    "css-loader": "^3.6.0",
+    "css-loader": "^5.0.1",
     "detect-port": "^1.3.0",
     "electron": "^10.1.5",
     "electron-builder": "^22.3.6",
@@ -197,8 +199,8 @@
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.3",
     "enzyme-to-json": "^3.5.0",
-    "eslint": "^7.5.0",
-    "eslint-config-airbnb": "^18.2.0",
+    "eslint": "^7.13.0",
+    "eslint-config-airbnb": "^18.2.1",
     "eslint-config-airbnb-typescript": "^12.0.0",
     "eslint-config-erb": "^1.0.0",
     "eslint-config-prettier": "^6.11.0",
@@ -217,13 +219,13 @@
     "identity-obj-proxy": "^3.0.0",
     "jest": "^26.1.0",
     "lint-staged": "^10.2.11",
-    "mini-css-extract-plugin": "^0.9.0",
+    "mini-css-extract-plugin": "^1.3.0",
     "opencollective-postinstall": "^2.0.3",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
     "prettier": "^2.1.2",
     "react-test-renderer": "^17.0.1",
     "rimraf": "^3.0.0",
-    "style-loader": "^1.2.1",
+    "style-loader": "^2.0.0",
     "stylelint": "^13.6.1",
     "stylelint-config-prettier": "^8.0.2",
     "stylelint-config-standard": "^20.0.0",
@@ -252,7 +254,7 @@
     "electron-log": "^4.2.4",
     "electron-store": "^6.0.1",
     "electron-updater": "^4.3.4",
-    "fontsource-roboto": "^3.0.3",
+    "electron-util": "^0.14.2",
     "fs-extra": "^9.0.1",
     "history": "^4.7.2",
     "hox": "^1.1.1",
@@ -263,9 +265,11 @@
     "react-dom": "^17.0.1",
     "react-hot-loader": "^4.12.21",
     "react-router-dom": "^5.2.0",
+    "reactour": "^1.18.0",
     "regenerator-runtime": "^0.13.5",
     "rxjs": "^6.6.3",
     "source-map-support": "^0.5.19",
+    "styled-components": "^5.2.1",
     "use-deep-compare-effect": "^1.4.0",
     "uuid": "^8.3.1"
   },
