--- a/package.json
+++ b/package.json
@@ -186,6 +186,7 @@
     "core-js": "^3.6.5",
     "cross-env": "^7.0.2",
     "css-loader": "^5.0.1",
+    "cz-conventional-changelog": "3.3.0",
     "detect-port": "^1.3.0",
     "electron": "^10.1.5",
     "electron-builder": "^22.3.6",
@@ -307,6 +308,11 @@
   "husky": {
     "hooks": {
       "pre-commit": "lint-staged"
+    }
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
     }
   }
 }
