--- a/package.json
+++ b/package.json
@@ -241,6 +241,7 @@
     "@hot-loader/react-dom": "^17.0.0",
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
+    "@material-ui/lab": "^4.0.0-alpha.56",
     "ahooks": "^2.7.1",
     "clsx": "^1.1.1",
     "dayjs": "^1.9.4",
