--- a/package.json
+++ b/package.json
@@ -254,6 +254,7 @@
     "history": "^4.7.2",
     "hox": "^1.1.2",
     "html2canvas": "^1.0.0-rc.7",
+    "lodash": "^4.17.20",
     "notistack": "^1.0.1",
     "obs-websocket-js": "^4.0.2",
     "react": "^17.0.1",
