--- a/package.json
+++ b/package.json
@@ -255,6 +255,7 @@
     "hox": "^1.1.2",
     "html2canvas": "^1.0.0-rc.7",
     "lodash": "^4.17.20",
+    "nedb-promises": "^4.1.0",
     "notistack": "^1.0.1",
     "obs-websocket-js": "^4.0.2",
     "react": "^17.0.1",
@@ -266,8 +267,7 @@
     "rxjs": "^6.6.3",
     "source-map-support": "^0.5.19",
     "styled-components": "^5.2.1",
-    "use-deep-compare-effect": "^1.4.0",
-    "uuid": "^8.3.1"
+    "use-deep-compare-effect": "^1.4.0"
   },
   "devEngines": {
     "node": ">=7.x",
