--- a/package.json
+++ b/package.json
@@ -240,6 +240,7 @@
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
     "@material-ui/lab": "^4.0.0-alpha.56",
+    "@sentry/electron": "^2.0.4",
     "ahooks": "^2.9.1",
     "clsx": "^1.1.1",
     "dayjs": "^1.9.6",
