--- a/package.json
+++ b/package.json
@@ -154,6 +154,7 @@
     "@babel/preset-react": "^7.10.4",
     "@babel/preset-typescript": "^7.10.4",
     "@babel/register": "^7.10.5",
+    "@sentry/webpack-plugin": "^1.14.0",
     "@teamsupercell/typings-for-css-modules-loader": "^2.2.1",
     "@types/echarts": "^4.9.1",
     "@types/enzyme": "^3.10.5",
