feat(suspension): 开始准备阵容战力的计算

--- a/package.json
+++ b/package.json
@@ -161,6 +161,7 @@
     "@types/enzyme-adapter-react-16": "^1.0.6",
     "@types/history": "^4.7.7",
     "@types/jest": "^26.0.10",
+    "@types/mathjs": "^6.0.8",
     "@types/node": "14.14.10",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
@@ -257,6 +258,7 @@
     "hox": "^1.1.2",
     "html2canvas": "^1.0.0-rc.7",
     "lodash": "^4.17.20",
+    "mathjs": "^8.1.0",
     "nedb-promises": "^4.1.0",
     "notistack": "^1.0.1",
     "obs-websocket-js": "^4.0.2",
