--- a/package.json
+++ b/package.json
@@ -237,10 +237,12 @@
     "webpack-merge": "^5.0.9"
   },
   "dependencies": {
+    "@date-io/dayjs": "1.x",
     "@hot-loader/react-dom": "^17.0.0",
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
     "@material-ui/lab": "^4.0.0-alpha.56",
+    "@material-ui/pickers": "^3.2.10",
     "@sentry/electron": "^2.0.4",
     "ahooks": "^2.9.1",
     "clsx": "^1.1.1",
