--- a/package.json
+++ b/package.json
@@ -238,6 +238,7 @@
     "webpack-merge": "^5.0.9"
   },
   "dependencies": {
+    "@hbt-org/core": "^1.0.0",
     "@hot-loader/react-dom": "^17.0.0",
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
