--- a/package.json
+++ b/package.json
@@ -235,11 +235,12 @@
     "webpack-bundle-analyzer": "^4.1.0",
     "webpack-cli": "^4.2.0",
     "webpack-dev-server": "^3.11.0",
-    "webpack-merge": "^5.0.9"
+    "webpack-merge": "^5.0.9",
+    "worker-loader": "^3.0.7"
   },
   "dependencies": {
-    "@hbt-org/core": "^1.0.0",
     "@date-io/dayjs": "1.x",
+    "@hbt-org/core": "^1.0.2",
     "@hot-loader/react-dom": "^17.0.0",
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
