--- a/app/package.json
+++ b/app/package.json
@@ -1,8 +1,8 @@
 {
   "name": "hearthstone-battlegrounds-tools",
   "productName": "HearthstoneBattlegroundsTools",
-  "version": "1.2.7",
-  "description": "HBT - 炉石传说酒馆战棋战绩统计工具",
+  "version": "1.3.0-beta.0",
+  "description": "HBT - 炉石传说酒馆战棋插件",
   "author": "chenyueban <jasonchan0527@gmail.com>",
   "main": "./dist/main.prod.js",
   "scripts": {
