--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "@types/enzyme-adapter-react-16": "^1.0.6",
     "@types/history": "^4.7.7",
     "@types/jest": "^26.0.10",
+    "@types/lodash": "^4.14.166",
     "@types/mathjs": "^6.0.8",
     "@types/node": "14.14.17",
     "@types/react": "^17.0.0",
