chore: 配置 standard-version 使其连同 src 目录内的 package.json 一同修改

--- a/package.json
+++ b/package.json
@@ -289,6 +289,18 @@
     ],
     "singleQuote": true
   },
+  "standard-version": {
+    "bumpFiles": [
+      {
+        "filename": "package.json",
+        "type": "json"
+      },
+      {
+        "filename": "src/package.json",
+        "type": "json"
+      }
+    ]
+  },
   "lint-staged": {
     "*.{js,jsx,ts,tsx}": [
       "cross-env NODE_ENV=development eslint --cache"
