--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "@babel/preset-react": "^7.12.7",
     "@babel/preset-typescript": "^7.12.7",
     "@babel/register": "^7.12.1",
+    "@babel/runtime": "^7.12.5",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.4.3",
     "@sentry/webpack-plugin": "^1.14.0",
     "@teamsupercell/typings-for-css-modules-loader": "^2.2.1",
@@ -78,9 +79,11 @@
     "@types/mathjs": "^6.0.8",
     "@types/node": "14.14.17",
     "@types/react": "^17.0.0",
+    "@types/react-beautiful-dnd": "^13.0.0",
     "@types/react-dom": "^17.0.0",
     "@types/react-router-dom": "^5.1.5",
     "@types/react-test-renderer": "^17.0.0",
+    "@types/react-window": "^1.8.2",
     "@types/reactour": "^1.17.1",
     "@types/uuid": "^8.3.0",
     "@types/webpack-env": "^1.15.2",
@@ -149,7 +152,7 @@
   },
   "dependencies": {
     "@date-io/dayjs": "1.x",
-    "@hbt-org/core": "^1.0.3",
+    "@hbt-org/core": "^1.1.1",
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
     "@material-ui/lab": "^4.0.0-alpha.56",
@@ -176,8 +179,10 @@
     "notistack": "^1.0.1",
     "obs-websocket-js": "^4.0.2",
     "react": "^17.0.1",
+    "react-beautiful-dnd": "^13.0.0",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
+    "react-window": "^1.8.6",
     "reactour": "^1.18.0",
     "regenerator-runtime": "^0.13.5",
     "rxjs": "^6.6.3",
