chore: 更改打包配置 使得 package 时上传到 github

--- a/package.json
+++ b/package.json
@@ -249,8 +249,10 @@
       "./assets/**"
     ],
     "publish": {
-      "provider": "generic",
-      "url": "https://hs.chenyueban.com/app"
+      "provider": "github",
+      "owner": "hbt-org",
+      "repo": "hearthstone-battlegrounds-tools",
+      "private": false
     }
   },
   "jest": {
