--- a/package.json
+++ b/package.json
@@ -151,7 +151,7 @@
   },
   "dependencies": {
     "@date-io/dayjs": "1.x",
-    "@hbt-org/core": "^1.1.11",
+    "@hbt-org/core": "^1.1.12",
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
     "@material-ui/lab": "^4.0.0-alpha.56",
@@ -161,7 +161,7 @@
     "axios": "^0.21.1",
     "clsx": "^1.1.1",
     "dayjs": "^1.9.6",
-    "echarts": "^5.0.1",
+    "echarts": "4.9.0",
     "echarts-for-react": "^2.0.16",
     "electron-debug": "^3.1.0",
     "electron-log": "^4.2.4",
