--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "hearthstone-battlegrounds-tools",
   "productName": "HearthstoneBattlegroundsTools",
-  "version": "1.5.3",
+  "version": "1.5.4",
   "description": "HBT - 炉石传说酒馆战棋插件",
   "repository": {
     "type": "git",
@@ -65,8 +65,8 @@
     "@babel/preset-typescript": "^7.12.17",
     "@babel/register": "^7.12.1",
     "@babel/runtime": "^7.12.18",
-    "@chenyueban/lint": "^0.1.4",
-    "@chenyueban/tsconfig": "^0.1.3",
+    "@chenyueban/lint": "^0.2.6",
+    "@chenyueban/tsconfig": "^0.1.7",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.4.3",
     "@sentry/webpack-plugin": "^1.14.1",
     "@teamsupercell/typings-for-css-modules-loader": "^2.2.1",
@@ -109,14 +109,11 @@
     "enzyme-adapter-react-16": "^1.15.3",
     "enzyme-to-json": "^3.5.0",
     "file-loader": "^6.0.0",
-    "husky": "^4.3.8",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^26.6.3",
-    "lint-staged": "^10.2.11",
     "mini-css-extract-plugin": "^1.3.8",
     "opencollective-postinstall": "^2.0.3",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
-    "prettier": "^2.2.0",
     "react-refresh": "^0.9.0",
     "react-test-renderer": "^17.0.1",
     "rimraf": "^3.0.0",
@@ -135,7 +132,7 @@
   },
   "dependencies": {
     "@date-io/dayjs": "1.x",
-    "@hbt-org/core": "^1.1.15",
+    "@hbt-org/core": "^1.1.17",
     "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.56",
@@ -188,7 +185,9 @@
     ],
     "afterSign": ".erb/scripts/Notarize.js",
     "mac": {
-      "target": ["dmg"],
+      "target": [
+        "dmg"
+      ],
       "type": "distribution",
       "hardenedRuntime": true,
       "entitlements": "assets/entitlements.mac.plist",
@@ -212,7 +211,9 @@
     },
     "win": {
       "requestedExecutionLevel": "highestAvailable",
-      "target": ["nsis"]
+      "target": [
+        "nsis"
+      ]
     },
     "nsis": {
       "oneClick": false,
@@ -225,7 +226,9 @@
       "buildResources": "assets",
       "output": "release"
     },
-    "extraResources": ["./assets/**"],
+    "extraResources": [
+      "./assets/**"
+    ],
     "publish": {
       "provider": "github",
       "owner": "hbt-org",
@@ -251,24 +254,13 @@
       }
     ]
   },
-  "lint-staged": {
-    "*.{js,jsx,ts,tsx}": ["cross-env NODE_ENV=development eslint --cache"],
-    "{*.json,.{babelrc,eslintrc,prettierrc}}": [
-      "prettier --ignore-path .eslintignore --parser json --write"
-    ],
-    "*.{css}": ["prettier --ignore-path .eslintignore --single-quote --write"],
-    "*.{html,md,yml}": [
-      "prettier --ignore-path .eslintignore --single-quote --write"
-    ]
-  },
   "renovate": {
-    "extends": ["bliss"],
-    "baseBranches": ["next"]
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged"
-    }
+    "extends": [
+      "bliss"
+    ],
+    "baseBranches": [
+      "next"
+    ]
   },
   "config": {
     "commitizen": {
